--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
-body{
+body {
+	background-color: antiquewhite;
 	margin-left: 30px;
-	margin-right: 30px;
-	background-color: antiquewhite
+	margin-right: 30px;	
 }
-.header{
-	text-align: center
+.header {
+	text-align: center;
 }
-.n{
-	font-size: 20px
+.n {
+	font-size: 20px;
 }
-.button{
-	transform: translateY(-3.2px)
+.button {
+	transform: translateY(-3.2px);
 }
-li{
-	margin-top: 20px
+li {
+	margin-top: 20px;
 }
 
