--- a/CSS/style.less
+++ b/CSS/style.less
@@ -1,3 +1,6 @@
+*{
+	box-sizing: border-box;
+}
 body {
 	background-color: antiquewhite;
 	margin-left: 30px;
@@ -6,13 +9,24 @@ body {
 .header {
 	text-align: center;
 }
-.n {
-	font-size: 20px;
+
+.button {	
+	min-width: 80%;
+	margin-left: 50%;		
+	transform: translateX(-50%);
+	margin-bottom: 20px;
+	font-size: 20px;	
 }
-.button {
-	transform: translateY(-3.2px);
+
+img{
+	width: 200px;
+	margin: 20px;
 }
-li {
-	margin-top: 20px;
+.book{
+	display: inline-block;
+	margin: 10px;
+	background-color:#f2d1a7;
+	width: 240px;
+	border-radius: 15px;
 }
 
