--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,12 +3,14 @@
   box-sizing: border-box;
 }
 body {
+  text-align: center;
   background-color: antiquewhite;
   margin-left: 30px;
   margin-right: 30px;
 }
-.header {
+.hader {
   text-align: center;
+  text-shadow: 0 0 2px #fff, -1px -1px 0 hsl(80, 70%, 35%), -2px -2px 1px hsl(80, 70%, 35%), -2px -2px 2px hsl(80, 10%, 15%);
 }
 .button {
   min-width: 80%;
@@ -27,4 +29,7 @@ img {
   background-color: #f2d1a7;
   width: 240px;
   border-radius: 15px;
+}
+h4 {
+  text-align: left;
 }
