--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,12 @@ body {
 }
 .hader {
   text-align: center;
+  /*background-color: #666666;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    text-shadow: rgba(255,255,255,0.5) 0px 3px 3px;*/
   text-shadow: 0 0 2px #fff, -1px -1px 0 hsl(80, 70%, 35%), -2px -2px 1px hsl(80, 70%, 35%), -2px -2px 2px hsl(80, 10%, 15%);
 }
 .button {
