--- a/CSS/style.less
+++ b/CSS/style.less
@@ -1,6 +1,14 @@
 *{
 	box-sizing: border-box;
 }
+.colortext{
+	position: absolute;
+	color: #ff0000;
+	font-size: 40px;
+	transform: translate(175px, -30px);
+	text-shadow: -5px 5px 10px #000000;
+	
+}
 body {
 	text-align: center;
 	background-color: antiquewhite;
